--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<a href="https://twitter.com/dontstop_belivn" target="_blank"><button type="button" class="btn btn-tw" style="background-color: #55ACEE;color: #fff;"><i class="fa fa-twitter left"></i> Twitter</button></a>                                                                                               
 						<a href="https://plus.google.com/111473305952243220263" target="_blank"><button type="button" class="btn btn-gplus" style="background-color: #DD4B39;color: #fff;"><i class="fa fa-google-plus left"></i> Google +</button></a>
 						<a href="https://www.linkedin.com/in/arjun-dass-3a3434106" target="_blank"><button type="button" class="btn btn-li" style="background-color: #0082CA;color: #fff;"><i class="fa fa-linkedin left"></i> Linkedin</button></a>
-						<a href="https://github.com/kiiiiNNNNNNNNNyyyy" target="_blank"><button type="button" class="btn btn-git" style="background-color: #ccc;color: #fff;"><i class="fa fa-github left"></i> Github</button></a>
+						<a href="https://github.com/kinny94" target="_blank"><button type="button" class="btn btn-git" style="background-color: #ccc;color: #fff;"><i class="fa fa-github left"></i> Github</button></a>
 					</div>
 				</div>
 			</div>
@@ -458,7 +458,7 @@
 						<h4><i class="fa fa-star fa-4" aria-hidden="true"></i>&nbsp;Text Editor - Java Programming &nbsp;</h4>
 					</div>
 					<div class="pull-right">
-						<h4 class="text-right">April 2017 &nbsp; <a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Text%20Editor"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a></h4>
+						<h4 class="text-right">April 2017 &nbsp; <a target="_blank" href="https://github.com/kinny94/Java/tree/master/Text%20Editor"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a></h4>
 					</div>
 				</div><br/><br/> 	
 				<div class="col-lg-12">
@@ -476,7 +476,7 @@
 						<h4><i class="fa fa-star fa-4" aria-hidden="true"></i>&nbsp;Interactive Task Manager - Human Computer Interaction</h4>
 					</div>
 					<div class="pull-right">
-						<h4 class="text-right">December 2016 &nbsp; <a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Human-Computer-Interaction"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a></h4>
+						<h4 class="text-right">December 2016 &nbsp; <a target="_blank" href="https://github.com/kinny94/Human-Computer-Interaction"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a></h4>
 					</div>
 				</div><br/><br/> 	
 				<div class="col-lg-12">
@@ -493,7 +493,7 @@
 						<h4><i class="fa fa-star" aria-hidden="true"></i>&nbsp;GoFood - Buy and Sell Food Online</h4>
 					</div>
 					<div class="pull-right">
-						<h4 class="text-right">November 2016 &nbsp; <a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a></h4>
+						<h4 class="text-right">November 2016 &nbsp; <a target="_blank" href="https://github.com/kinny94/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a></h4>
 					</div>
 				</div>
 				<div class="col-lg-12">
@@ -627,7 +627,7 @@
 									<a href="https://www.linkedin.com/in/arjun-dass-3a3434106" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
 								</li>
 								<li>
-									<a href="https://github.com/kiiiiNNNNNNNNNyyyy" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
+									<a href="https://github.com/kinny94" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
 								</li>
 							</ul>
 						</div>
@@ -890,7 +890,7 @@
 												<strong>Web Development</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/arkadium"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/arkadium"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
 								</div>
 								<div class="col-lg-12">
@@ -910,7 +910,7 @@
 												<strong>Web Development</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://kiiiinnnnnnnnnyyyy.github.io/Human-Computer-Interaction/"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+										<a target="_blank" href="https://kinny94.github.io/Human-Computer-Interaction/"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
 									<div class="col-lg-4">
 										<h3>GoFood - Order-Sell Food Online</h3>
@@ -928,7 +928,7 @@
 												<strong>Web Development</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
 									<div class="col-lg-4">
 										<h3>BookCloud (Startup) - Buy-Sell Books online</h3>
@@ -967,7 +967,7 @@
 												<strong>Web Development</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Development/tree/master/Lab%2010"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/Web-Development/tree/master/Lab%2010"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 									<div class="col-lg-4">
 										<h3>Server-Client Side Manipulation</h3>
@@ -985,7 +985,7 @@
 												<strong>Web Development</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Development/tree/master/Server-Client%20Side%20Manipulation"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/Web-Development/tree/master/Server-Client%20Side%20Manipulation"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 								</div>
 							</div>
@@ -1027,7 +1027,7 @@
 												<strong>Game Development</strong>
 											</li>
 										</ul>
-										<a href="https://kiiiinnnnnnnnnyyyy.github.io/" target="_blank"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a href="https://kinny94.github.io/" target="_blank"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 									<div class="col-lg-4">
 										<h3>Ping - Pong</h3>
@@ -1045,7 +1045,7 @@
 												<strong>Game Development</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://kiiiinnnnnnnnnyyyy.github.io/Ping-Pong/"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a target="_blank" href="https://kinny94.github.io/Ping-Pong/"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 									<div class="col-lg-4">
 										<h3>Attack of the Cuteness</h3>
@@ -1066,7 +1066,7 @@
 												</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Game-Development/blob/master/Corona%20Game%20-%20Attack%20of%20the%20Cuteness"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/Game-Development/blob/master/Corona%20Game%20-%20Attack%20of%20the%20Cuteness"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 								</div>
 
@@ -1085,7 +1085,7 @@
 												</strong>
 											</li>
 										</ul>
-										<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Unity/tree/master/2D%20Ball%20Game" target="_blank"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a href="https://github.com/kinny94/Unity/tree/master/2D%20Ball%20Game" target="_blank"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 									<div class="col-lg-4 ">
 										<h3>Unity - Quesionnaire Game</h3>
@@ -1101,7 +1101,7 @@
 												</strong>
 											</li>
 										</ul>
-										<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Unity/tree/master/Text101" target="_blank"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a href="https://github.com/kinny94/Unity/tree/master/Text101" target="_blank"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 								</div>
 
@@ -1141,7 +1141,7 @@
 												</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/WhereareYou"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/Android/tree/master/WhereareYou"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 									<div class="col-lg-4 ">
 										<h2>Brain Teaser App</h2>
@@ -1158,7 +1158,7 @@
 												</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/BrainTrainer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/Android/tree/master/BrainTrainer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 									<div class="col-lg-4 ">
 										<h2>What's the Weather</h2>
@@ -1175,7 +1175,7 @@
 												</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/Weather"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/Android/tree/master/Weather"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
 								</div>
 								<div class="col-lg-12">
@@ -1194,7 +1194,7 @@
 												</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/Tic-Tac-Toe"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/Android/tree/master/Tic-Tac-Toe"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 									<div class="col-lg-4 ">
 										<h2>French Phrases</h2>
@@ -1211,7 +1211,7 @@
 												</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 									<div class="col-lg-4 ">
 										<h2>Guess The Celebrity</h2>
@@ -1228,7 +1228,7 @@
 												</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+										<a target="_blank" href="https://github.com/kinny94/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 									</div>
 								</div>
 								<div class="col-lg-12">
@@ -1247,7 +1247,7 @@
 												</strong>
 											</li>
 										</ul>
-										<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Android/tree/master/EggTimer"><button type="button" class="btn btn-default">
+										<a target="_blank" href="https://github.com/kinny94/Android/tree/master/EggTimer"><button type="button" class="btn btn-default">
 											<i class="fa fa-github"></i> View</button></a>
 										</div>
 									</div>
@@ -1287,7 +1287,7 @@
 													</strong>
 												</li>
 											</ul>
-											<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Mdeia%20Player"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+											<a target="_blank" href="https://github.com/kinny94/Java/tree/master/Mdeia%20Player"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
 										</div>
 										<div class="col-lg-4 ">
 											<h2>Blocks Game</h2>
@@ -1304,7 +1304,7 @@
 													</strong>
 												</li>
 											</ul>
-											<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Blocks"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+											<a target="_blank" href="https://github.com/kinny94/Java/tree/master/Blocks"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
 										</div>
 										<div class="col-lg-4 ">
 											<h2>Chat Room</h2>
@@ -1321,7 +1321,7 @@
 													</strong>
 												</li>
 											</ul>
-											<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Messenger"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+											<a target="_blank" href="https://github.com/kinny94/Java/tree/master/Messenger"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
 										</div>
 									</div>
 									<div class="col-lg-12">
@@ -1340,7 +1340,7 @@
 													</strong>
 												</li>
 											</ul>
-											<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Database"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+											<a target="_blank" href="https://github.com/kinny94/Java/tree/master/Database"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
 										</div>
 										<div class="col-lg-4">	    									
 											<h2>Text Editor</h2>
@@ -1357,7 +1357,7 @@
 													</strong>
 												</li>
 											</ul>
-											<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Java/tree/master/Text%20Editor"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
+											<a target="_blank" href="https://github.com/kinny94/Java/tree/master/Text%20Editor"><button type="button" class="btn btn-default" ><i class="fa fa-github"></i>View</button></a>
 										</div>
 									</div>
 								</div>
@@ -1396,7 +1396,7 @@
 													</strong>
 												</li>
 											</ul>
-											<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Beginner's%20Program/Desktop%20Application/Downloader.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+											<a href="https://github.com/kinny94/Python/blob/master/Beginner's%20Program/Desktop%20Application/Downloader.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 										</div>
 										<div class="col-lg-4 ">
 											<h2>Python Bounce Game</h2>
@@ -1413,7 +1413,7 @@
 													</strong>
 												</li>
 											</ul>
-											<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Bounce-Game.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+											<a href="https://github.com/kinny94/Python/blob/master/Project/Bounce-Game.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 										</div>
 										<div class="col-lg-4 ">
 											<h2>Python Ping-Pong Game</h2>
@@ -1430,7 +1430,7 @@
 													</strong>
 												</li>
 											</ul>
-											<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Ping-Pong.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+											<a href="https://github.com/kinny94/Python/blob/master/Project/Ping-Pong.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 										</div>
 									</div>
 									<div class="col-lg-12">
@@ -1449,7 +1449,7 @@
 													</strong>
 												</li>
 											</ul>
-											<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/tree/master/Project/Web%20Application"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+											<a href="https://github.com/kinny94/Python/tree/master/Project/Web%20Application"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 										</div>
 										<div class="col-lg-4 ">
 											<h2>Python GUI Calculator</h2>
@@ -1466,7 +1466,7 @@
 													</strong>
 												</li>
 											</ul>
-											<a href="https://github.com/kiiiiNNNNNNNNNyyyy/Python/blob/master/Project/Calculator.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+											<a href="https://github.com/kinny94/Python/blob/master/Project/Calculator.py"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 										</div>
 									</div>
 								</div>
