Added web development project

--- a/index.html
+++ b/index.html
@@ -839,6 +839,24 @@
 							<div class="modal-body">
 								<div class="col-lg-12">
 									<div class="col-lg-4">
+										<h3></h3>Github Profile Viewer</h3>
+										<hr class="star-primary">
+										<img src="img/projects/github-viewer.png" class="img-responsive img-centered" alt="">
+										<p style="text-align: justify;">A react application which uses jQuery and Bootstrap 4. The application allows you to view any Github user by their name. The Application make use of the Github Api to search the user in the Github database.</p>
+										<ul class="list-inline item-details">
+											<li>Tags:
+												<strong>Javascript, ReactJS, Gituhb API, Bootstrap 4</strong>
+											</li>
+											<li>Date:
+												<strong>September 2017</strong>
+											</li>
+											<li>Service:
+												<strong>Web Development</strong>
+											</li>
+										</ul>
+										<a target="_blank" href="https://github.com/kinny94/github-profile-viewer"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
+									</div>
+									<div class="col-lg-4">
 										<h3>Socket.io Chat Room</h3>
 										<hr class="star-primary">
 										<img src="img/projects/socketio-app.png" class="img-responsive img-centered" alt="">
@@ -874,6 +892,8 @@
 										</ul>
 										<a target="_blank" href="https://github.com/kinny94/React-Todo-App"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
+								</div>
+								<div class="col-lg-12">
 									<div class="col-lg-4">
 										<h3>The Movie Quiz - Arkadium Games</h3>
 										<hr class="star-primary">
@@ -892,8 +912,6 @@
 										</ul>
 										<a target="_blank" href="https://github.com/kinny94/arkadium"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
-								</div>
-								<div class="col-lg-12">
 									<div class="col-lg-4">
 										<h3>ITM - Interactive Task Manager</h3>
 										<hr class="star-primary">
@@ -930,6 +948,8 @@
 										</ul>
 										<a target="_blank" href="https://github.com/kinny94/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
+								</div>
+								<div class="col-lg-12">
 									<div class="col-lg-4">
 										<h3>BookCloud (Startup) - Buy-Sell Books online</h3>
 										<hr class="star-primary">
@@ -949,8 +969,6 @@
 										</ul>
 										<a target="_blank" href="https:facebook.com/bookcloud"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 									</div>
-								</div>
-								<div class="col-lg-12">
 									<div class="col-lg-4 ">
 										<h3>User Authentication System</h3>
 										<hr class="star-primary">
