Fixed new projects error

--- a/index.html
+++ b/index.html
@@ -1142,6 +1142,40 @@
 					<div class="row">
 						<div class="col-lg-12">
 							<div class="col-lg-4 ">
+								<h2>FlappyBird</h2>
+								<hr class="star-primary">
+								<img src="img/projects/FlappyBird.gif" class="img-responsive img-centered" alt="">
+								<p style="text-align: justify;">This project is an android application which is a clone of the famous Flappy bird game application. The application is developed using Libgdx library and is compatible with almost all old and every latest version of the android. You need to tap on the screen to start the game.</p>
+								<ul class="list-inline item-details">
+									<li>Tags:
+										<strong>Android, Libgdx, Game
+										</strong>
+									</li>
+									<li>Date:
+										<strong>September 2017
+										</strong>
+									</li>
+								</ul>
+								<a target="_blank" href="https://github.com/kinny94/flappy-bird-clone"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+							</div>
+							<div class="col-lg-4 ">
+								<h2>Instagram Clone</h2>
+								<hr class="star-primary">
+								<img src="img/projects/Instagram-clone-demo.gif" class="img-responsive img-centered" alt="">
+								<p style="text-align: justify;">Its an instagram-alike android application developed only for education purposes. Its a clone of instagram application in terms of functionalities. The application uses Firebase authentication for Signing up and loggin users and saving their details</p>
+								<ul class="list-inline item-details">
+									<li>Tags:
+										<strong>Android, Firebase, Instagram
+										</strong>
+									</li>
+									<li>Date:
+										<strong>September 2017
+										</strong>
+									</li>
+								</ul>
+								<a target="_blank" href="https://github.com/kinny94/instagram-clone"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+							</div>
+							<div class="col-lg-4 ">
 								<h2>Where Are You?</h2>
 								<hr class="star-primary">
 								<img src="img/projects/AndroidLocation.png" class="img-responsive img-centered" alt="">
@@ -1157,7 +1191,9 @@
 									</li>
 								</ul>
 								<a target="_blank" href="https://github.com/kinny94/Android/tree/master/WhereareYou"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
-							</div>
+							</div>	
+						</div>
+						<div class="col-lg-12">
 							<div class="col-lg-4 ">
 								<h2>Brain Teaser App</h2>
 								<hr class="star-primary">
@@ -1192,8 +1228,6 @@
 								</ul>
 								<a target="_blank" href="https://github.com/kinny94/Android/tree/master/Weather"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
 							</div>
-						</div>
-						<div class="col-lg-12">
 							<div class="col-lg-4 ">
 								<h2>Tic-Tac-Toe Game</h2>
 								<hr class="star-primary">
@@ -1211,6 +1245,8 @@
 								</ul>
 								<a target="_blank" href="https://github.com/kinny94/Android/tree/master/Tic-Tac-Toe"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 							</div>
+						</div>
+						<div class="col-lg-12">
 							<div class="col-lg-4 ">
 								<h2>French Phrases</h2>
 								<hr class="star-primary">
@@ -1245,8 +1281,6 @@
 								</ul>
 								<a target="_blank" href="https://github.com/kinny94/Android/tree/master/PhrasesApp"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
 							</div>
-						</div>
-						<div class="col-lg-12">
 							<div class="col-lg-4">
 								<h2>Egg Timer App</h2>
 								<hr class="star-primary">
