--- a/index.html
+++ b/index.html
@@ -343,6 +343,38 @@
 							<p>March 2017 <a href="#pluralsight1" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
 						</div>
 					</div>
+					<div class="col-lg-12">
+						<div class="pull-left">
+							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;C++ Fundamentals</p>
+						</div>
+						<div class="pull-right">
+							<p>September 2017 <a href="#cppFundamentals" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
+						</div>
+					</div>
+					<div class="col-lg-12">
+						<div class="pull-left">
+							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Java Fundamentals</p>
+						</div>
+						<div class="pull-right">
+							<p>September 2017 <a href="#javaFundamentals" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
+						</div>
+					</div>
+					<div class="col-lg-12">
+						<div class="pull-left">
+							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Learn How to Program with C++</p>
+						</div>
+						<div class="pull-right">
+							<p>September 2017 <a href="#learnHowToCpp" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
+						</div>
+					</div>
+					<div class="col-lg-12">
+						<div class="pull-left">
+							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Introduction to Algorithms</p>
+						</div>
+						<div class="pull-right">
+							<p>March 2017 <a href="#introToAlgorithms" data-toggle="modal"><button class="btn btn-sm">View</button></a></p>
+						</div>
+					</div>
 				</div>
 			</div><br/>
 		</div>
@@ -655,6 +687,8 @@
 
 		<!-------------------------------- Certificate Modals ---------------------->
 
+		<!-- Oracle certified Java Programmer -->
+
 		<div class="portfolio-modal modal fade" id="ocjp" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
 			<div class="model-content">
 				<div class="close-modal" data-dismiss="modal">
@@ -678,6 +712,8 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- NIIT Certifiate of Excellence -->
 
 		<div class="portfolio-modal modal fade" id="niit" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
 			<div class="model-content">
@@ -703,6 +739,8 @@
 			</div>
 		</div>
 
+		<!-- HPCL -->
+
 		<div class="portfolio-modal modal fade" id="hpcl" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
 			<div class="model-content">
 				<div class="close-modal" data-dismiss="modal">
@@ -726,6 +764,8 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- Jobninja - Pluralsight -->
 
 		<div class="portfolio-modal modal fade" id="jobninja" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
 			<div class="model-content">
@@ -751,6 +791,8 @@
 			</div>
 		</div>
 
+		<!-- HTML 5 Game Development - Pluralsight -->
+
 		<div class="portfolio-modal modal fade" id="udemy1" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
 			<div class="model-content">
 				<div class="close-modal" data-dismiss="modal">
@@ -775,6 +817,8 @@
 			</div>
 		</div>
 
+		<!-- Java Multithreading - Pluralsight -->
+
 		<div class="portfolio-modal modal fade" id="udemy2" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
 			<div class="model-content">
 				<div class="close-modal" data-dismiss="modal">
@@ -798,6 +842,9 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- Python Desktop Application - Pluralsight -->
+
 		<div class="portfolio-modal modal fade" id="pluralsight1" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
 			<div class="model-content">
 				<div class="close-modal" data-dismiss="modal">
@@ -822,6 +869,109 @@
 			</div>
 		</div>
 
+		<!-- Java Fundamentals - Pluralsight -->
+
+		<div class="portfolio-modal modal fade" id="javaFundamentals" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+			<div class="model-content">
+				<div class="close-modal" data-dismiss="modal">
+					<div class="lr">
+						<div class="rl">
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12">
+							<div class="model-body">
+								<div class="col-lg-12">
+									<h3 class="text-center">Java Fundamentals - Pluralsight</h3>
+									<hr class="star-primary">
+									<img src="img/certificates/Java Fundamentals.png" class="img-responsive img-centered" alt="Java Fundamentals">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- C++ Fundamentals - Pluralsight -->
+
+		<div class="portfolio-modal modal fade" id="cppFundamentals" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+			<div class="model-content">
+				<div class="close-modal" data-dismiss="modal">
+					<div class="lr">
+						<div class="rl">
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12">
+							<div class="model-body">
+								<div class="col-lg-12">
+									<h3 class="text-center">C++ Fundamentals - Pluralsight</h3>
+									<hr class="star-primary">
+									<img src="img/certificates/C++ Fundamentals.png" class="img-responsive img-centered" alt="C++ Fundamentals">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Learn how to program with C++ -->
+
+		<div class="portfolio-modal modal fade" id="learnHowToCpp" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+			<div class="model-content">
+				<div class="close-modal" data-dismiss="modal">
+					<div class="lr">
+						<div class="rl">
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12">
+							<div class="model-body">
+								<div class="col-lg-12">
+									<h3 class="text-center">Learn How to Program with C++ - Pluralsight</h3>
+									<hr class="star-primary">
+									<img src="img/certificates/Learn how to program with c++.png" class="img-responsive img-centered" alt="Learn How to Program with C++">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Introduction to Algorithms - Pluralsight -->
+
+		<div class="portfolio-modal modal fade" id="introToAlgorithms" tabindex="-1" role="dialog" aria-hidden="true" style="background-color: #fff;">
+			<div class="model-content">
+				<div class="close-modal" data-dismiss="modal">
+					<div class="lr">
+						<div class="rl">
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12">
+							<div class="model-body">
+								<div class="col-lg-12">
+									<h3 class="text-center">Introduction to Algorithms - Pluralsight</h3>
+									<hr class="star-primary">
+									<img src="img/certificates/Intro to Algorithms.png" class="img-responsive img-centered" alt="Introduction to Algorithms">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- Portfolio Modals -->
 
