--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
 						<h4>Stevens Institute of Technology, Hoboken, NJ</h4>
 					</div>
 					<div class="pull-right">
-						<h4 class="text-right">Expected December 2017</h4>
+						<h4 class="text-right">December 2017</h4>
 					</div>
 				</div>
 				<div class="col-lg-12">
 					<p>Master of Science in Computer Science</p>
 				</div>
 				<div class="col-lg-12">
-					<p>GPA: <span>3.710/4.0</span></p>
+					<p>GPA: <span>3.8/4.0</span></p>
 				</div>
 			</div><br/>
 			<div class="row">
@@ -177,7 +177,7 @@
 				</div>
 				<div class="col-lg-3 col-lg-offset-1">
 					<h4>Internet Technologies</h4>
-					<p>HTML5, CSS3, Javascript (Node, AngularJs, React), Django, jQuery, Ajax, Vanilla Javascript.</p>
+					<p>HTML5, CSS3, Javascript (Node, Angular, React), Django, jQuery, Ajax, Vanilla Javascript.</p>
 				</div>
 			</div>
 		</div>
@@ -186,19 +186,63 @@
 	<!-- Experience Section -->
 	<section class="education" id="experience">
 		<div class="container">
+
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2>Experience</h2>
 					<hr class="star-primary">
 				</div>
 			</div>
+
+			<div class="row">
+				<div class="col-lg-12">	
+					<div class="pull-left">
+						<h4>Hyland Software Inc, Westlake, OH</h4>
+					</div>
+					<div class="pull-right">
+						<h4 class="text-right">June 2018 - Present</h4>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<h5>Software Engineer 2, Information Technology</h5><br/>
+					<ul>
+						<li><p>Developed reusable Angular web components for the Hyland OnBase client. Researched and implemented different client-side state management frameworks like NgRx. Integrated Unit and E2E tests.</p></li>
+						<li><p>Currently working on developing Hybrid mobile application using Angular, GraphQL and Hyland's In-house mobile shell responsible for providing native mobile functionality.</p></li>
+						<li><p>Subject matter expert on multiple front-end modules and components of the hybrid mobile application.</p></li>
+						<li><p>Consult with Product Owner and the Scrum master to identify minimal viable product and decomposed feature set into small scoped user stories.</p></li>
+						<li><p>Continuously integrated and deployed developed software. Updated the continuous integration/deployment scripts as necessary to improve continuous integration practices</p></li>
+						<li><p>Provide guidance and mentoring to interns and new hired employees.</p></li>
+						<li><p>Researched and prototyped a native OnBase mobile client for both Android and IOS using Flutter.</p></li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-lg-12">	
+					<div class="pull-left">
+						<h4>Cold Spring Harbor Labs, New York City</h4>
+					</div>
+					<div class="pull-right">
+						<h4 class="text-right">December 2017 - June 2018</h4>
+					</div>
+				</div>
+				<div class="col-lg-12">
+					<h5>Software Engineer, Information Technology</h5><br/>
+					<ul>
+						<li><p>Worked on rebuilding Mascot Parser using Python, JavaScript, React, and MongoDB for reading genetic genome files.</p></li>
+						<li><p>Increased the overall efficiency of the parser by removing bottlenecks and refactoring the existing modules</p></li>
+						<li><p>Developed Restful API’s for maintaining the integration of front end with MongoDB database using Node and React.</p></li>
+					</ul>
+				</div>
+			</div>
+
 			<div class="row">
 				<div class="col-lg-12">	
 					<div class="pull-left">
 						<h4>Arkadium, New York City</h4>
 					</div>
 					<div class="pull-right">
-						<h4 class="text-right">June 2017 - Present</h4>
+						<h4 class="text-right">May 2017 - September 2017</h4>
 					</div>
 				</div>
 				<div class="col-lg-12">
@@ -251,24 +295,6 @@
 				</div>
 			</div>
 			<br/><br/>
-			<div class="row">
-				<div class="col-lg-12">	
-					<div class="pull-left">
-						<h4>Hindustan Petroleum, New Delhi</h4>
-					</div>
-					<div class="pull-right">
-						<h4 class="text-right">May 2014 - July 2015</h4>
-					</div>
-				</div>
-				<div class="col-lg-12">
-					<h5>Front-End Developer Intern, Information Technology</h5><br/>
-					<ul>
-						<li><p>Designed and Maintained the HPCL portal using HTML and CSS3.</p></li>
-						<li><p>Created a Image Slider using HTML5 and jQuery for company's employee portal</p></li>
-						<li><p>Developed Webpages for the employee portal using HTML and CSS</p></li>
-					</ul>
-				</div>
-			</div>
 		</div>
 	</section>
 
@@ -641,8 +667,8 @@
 				<div class="row">
 					<div class="footer-col col-md-4">
 						<h3>Location</h3>
-						<p>85 Sherman Avenue
-							<br>Jersey City, NJ 07307</p>
+						<p>
+							<br>Westlake, OH, 44145</p>
 						</div>
 						<div class="footer-col col-md-4">
 							<h3>Around the Web</h3>
